# DoAnDLL

./: .gitignore  COLAB_GUIDE.md  CONTRIBUTING.md  Dockerfile  MIGRATION_SUMMARY.md  MULTI_METHOD_README.md  Makefile  Makefile.backup  Makefile.new  QUICKSTART.md  README.md  README_NEW.md  README_OLD.md  README_implementation.md  SOLUTION_SUMMARY.md  Smart_Pill_Recognition_Colab.ipynb  TRAINING_FIX_README.md  activate_env.sh  app.py  clean  colab_setup.py  colab_trainer.py  demo  demo_multi_method.py  deploy  docker-compose.yml  dual_training_summary_20250726_074647.txt  dual_training_summary_20250726_080218.txt  main.py  main_Basic_model.py  project_tour  pyproject.toml  quick_test.py  recognize.py  requirements-colab.txt  requirements-cpu.txt  requirements-minimal.txt  requirements-nogpu.txt  requirements.txt  run  (+19 more)
.streamlit/: config.toml  secrets.toml
Dataset_BigData/CURE_dataset/: recognition.py  train.py
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/0/bottom/Customer/: 0_bottom_23.txt  0_bottom_26.txt  0_bottom_27.txt  0_bottom_28.txt  0_bottom_29.txt  0_bottom_30.txt  0_bottom_31.txt  0_bottom_32.txt  0_bottom_34.txt  0_bottom_35.txt  0_bottom_39.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/0/top/Customer/: 0_top_0.txt  0_top_10.txt  0_top_11.txt  0_top_12.txt  0_top_14.txt  0_top_16.txt  0_top_17.txt  0_top_19.txt  0_top_2.txt  0_top_20.txt  0_top_3.txt  0_top_4.txt  0_top_5.txt  0_top_7.txt  0_top_9.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/1/bottom/Customer/: 1_bottom_53.txt  1_bottom_56.txt  1_bottom_57.txt  1_bottom_58.txt  1_bottom_60.txt  1_bottom_61.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/1/top/Customer/: 1_top_41.txt  1_top_42.txt  1_top_43.txt  1_top_45.txt  1_top_46.txt  1_top_49.txt  1_top_51.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/10/bottom/Customer/: 10_bottom_454.txt  10_bottom_456.txt  10_bottom_457.txt  10_bottom_458.txt  10_bottom_460.txt  10_bottom_463.txt  10_bottom_466.txt  10_bottom_468.txt  10_bottom_469.txt  10_bottom_471.txt  10_bottom_472.txt  10_bottom_475.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/10/top/Customer/: 10_top_432.txt  10_top_433.txt  10_top_434.txt  10_top_436.txt  10_top_437.txt  10_top_438.txt  10_top_439.txt  10_top_440.txt  10_top_442.txt  10_top_443.txt  10_top_445.txt  10_top_446.txt  10_top_447.txt  10_top_450.txt  10_top_451.txt  10_top_452.txt  10_top_453.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/11/bottom/Customer/: 11_bottom_500.txt  11_bottom_502.txt  11_bottom_503.txt  11_bottom_505.txt  11_bottom_507.txt  11_bottom_509.txt  11_bottom_512.txt  11_bottom_513.txt  11_bottom_515.txt  11_bottom_516.txt  11_bottom_518.txt  11_bottom_519.txt  11_bottom_520.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/11/top/Customer/: 11_top_476.txt  11_top_479.txt  11_top_481.txt  11_top_482.txt  11_top_483.txt  11_top_485.txt  11_top_488.txt  11_top_489.txt  11_top_491.txt  11_top_492.txt  11_top_493.txt  11_top_495.txt  11_top_496.txt  11_top_497.txt  11_top_498.txt  11_top_499.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/12/bottom/Customer/: 12_bottom_542.txt  12_bottom_543.txt  12_bottom_544.txt  12_bottom_546.txt  12_bottom_547.txt  12_bottom_549.txt  12_bottom_550.txt  12_bottom_551.txt  12_bottom_552.txt  12_bottom_553.txt  12_bottom_554.txt  12_bottom_556.txt  12_bottom_557.txt  12_bottom_559.txt  12_bottom_560.txt  12_bottom_561.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/12/top/Customer/: 12_top_523.txt  12_top_525.txt  12_top_527.txt  12_top_528.txt  12_top_532.txt  12_top_533.txt  12_top_535.txt  12_top_536.txt  12_top_537.txt  12_top_541.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/13/bottom/Customer/: 13_bottom_587.txt  13_bottom_588.txt  13_bottom_593.txt  13_bottom_595.txt  13_bottom_596.txt  13_bottom_597.txt  13_bottom_598.txt  13_bottom_600.txt  13_bottom_601.txt  13_bottom_602.txt  13_bottom_603.txt  13_bottom_604.txt  13_bottom_605.txt  13_bottom_606.txt  13_bottom_607.txt  13_bottom_608.txt  13_bottom_612.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/13/top/Customer/: 13_top_564.txt  13_top_565.txt  13_top_566.txt  13_top_567.txt  13_top_568.txt  13_top_569.txt  13_top_571.txt  13_top_574.txt  13_top_576.txt  13_top_577.txt  13_top_579.txt  13_top_582.txt  13_top_583.txt  13_top_584.txt  13_top_585.txt  13_top_586.txt
Dataset_BigData/CURE_dataset/CURE_dataset_train_cut_bounding_box/14/bottom/Customer/: 14_bottom_637.txt  14_bottom_640.txt  14_bottom_641.txt  14_bottom_643.txt  14_bottom_644.txt  14_bottom_645.txt  14_bottom_646.txt  14_bottom_648.txt  14_bottom_649.txt  14_bottom_650.txt  14_bottom_651.txt  14_bottom_652.txt  14_bottom_653.txt  14_bottom_654.txt  14_bottom_655.txt  14_bottom_656.txt
apps/cli/: main.py
apps/web/: streamlit_app.py
config/: config.yaml
core/: README.md  __init__.py  web_training.py
core/data/: __init__.py  cure_dataset.py  data_processing.py
core/models/: __init__.py  model_registry.py
core/training/: __init__.py  comparison.py  hf_trainer.py  spark_trainer.py  trainer.py
core/utils/: port_manager.py  utils.py
docs/: CLEANUP_SUMMARY.md  DEMO_GUIDE.md  DEPLOYMENT.md  FINAL_OPTIMIZATION_REPORT.md  INDEX.md  OPTIMIZATION_SUMMARY.md  README_OPTIMIZATION.md  TRAINING_GUIDE.md  UV_GUIDE.md
legacy/: REFACTOR_SUMMARY.md  app_with_dataset.py  train_optimized_server.py
notebooks/: data_exploration.ipynb  demo_multimodal_pill_recognition.ipynb  model_experiments.ipynb  results_analysis.ipynb
src/data/: data_processing.py
src/models/: multimodal_transformer.py
src/training/: trainer.py
src/utils/: metrics.py  utils.py
test_checkpoints/: test_model.json
tools/: .gitignore  Makefile  advanced_cleaner.py  cleanup.py  optimize_project.py  run  validate_setup.py
tools/docs/: PROJECT_STRUCTURE.md
(+386 files in other folders)
